--- a/highvoltage/src/HighSwiper/index.css
+++ b/highvoltage/src/HighSwiper/index.css
@@ -1,4 +1,4 @@
-#highswiper { height: 100% }
+#HighSwiper { height: 100% }
 html,
 body {
   position: relative;
@@ -41,7 +41,7 @@ body {
 
 .swiper-slide img {
   display: block;
-  width: 100%;
-  height: 100%;
+  width: 40%;
+  height: 40%;
   object-fit: cover;
 }
